--- a/RentMate/templates/home_app/landlord-maintenance-list.html
+++ b/RentMate/templates/home_app/landlord-maintenance-list.html
@@ -58,6 +58,14 @@
                 Settings
             </a>
         </div>
+        <div class="logout-section">
+                <form method="post" action="{% url 'logout:logout' %}">
+                    {% csrf_token %}
+                        <button type="submit" class="logout-btn">Log out</button>
+                </form>
+        </div>
+
+        </div>
     </div>
 
     <!-- Main Content -->
