--- a/RentMate/templates/home_app_tenant/tenant-home.html
+++ b/RentMate/templates/home_app_tenant/tenant-home.html
@@ -27,6 +27,15 @@
                 </svg>
                 Payment
             </a>
+            <a href="{% url 'tenant_lease' %}" class="nav-item {% if request.resolver_match.url_name == 'tenant_lease' %}active{% endif %}">
+            <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#fff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+              <rect x="7" y="6" width="18" height="20" rx="2"/>
+              <path d="M25 6l-6 6v-6h6Z"/>
+              <path d="M10 12h12M10 16h12M10 20h9"/>
+              <path d="M10 24c2 2 4-1 6 0c2 1 4-2 6 0"/>
+            </svg>
+                Lease
+            </a>
         </div>
 
         <div class="nav-section">
