--- a/RentMate/templates/home_app/home.html
+++ b/RentMate/templates/home_app/home.html
@@ -43,6 +43,15 @@
                 </svg>
                 Maintenance
             </a>
+            <a href="{% url 'landlord_leases' %}" class="nav-item {% if request.resolver_match.url_name == 'landlord_leases' %}active{% endif %}">
+                <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#fff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                  <rect x="7" y="6" width="18" height="20" rx="2"/>
+                  <path d="M25 6l-6 6v-6h6Z"/>
+                  <path d="M10 12h12M10 16h12M10 20h9"/>
+                  <path d="M10 24c2 2 4-1 6 0c2 1 4-2 6 0"/>
+                </svg>
+                Leases
+            </a>
             <a href="#" class="nav-item">
                 <svg fill="currentColor" viewBox="0 0 20 20">
                     <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"/>
