--- a/RentMate/templates/home_app/tenant-account-register.html
+++ b/RentMate/templates/home_app/tenant-account-register.html
@@ -50,6 +50,15 @@
                 </svg>
                 Calendar
             </a>
+            <a href="{% url 'landlord_leases' %}" class="nav-item {% if request.resolver_match.url_name == 'landlord_leases' %}active{% endif %}">
+                <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#fff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                  <rect x="7" y="6" width="18" height="20" rx="2"/>
+                  <path d="M25 6l-6 6v-6h6Z"/>
+                  <path d="M10 12h12M10 16h12M10 20h9"/>
+                  <path d="M10 24c2 2 4-1 6 0c2 1 4-2 6 0"/>
+                </svg>
+                Leases
+            </a>
             <a href="#" class="nav-item">
                 <svg fill="currentColor" viewBox="0 0 20 20">
                     <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
