fixed(Profile and Lease Error): fixed UI errors

--- a/RentMate/templates/home_app/tenant-change-password.html
+++ b/RentMate/templates/home_app/tenant-change-password.html
@@ -28,7 +28,7 @@
                 {% endfor %}
             {% endif %}
 
-            <h2>Set Your New Password</h2>
+            <h2 style="color: white">Set Your New Password</h2>
 
             <form method="POST">
                 {% csrf_token %}
