--- a/RentMate/templates/home_app/tenant-list.html
+++ b/RentMate/templates/home_app/tenant-list.html
@@ -68,22 +68,14 @@
     <!-- Main Content -->
     <div class="main-content">
         <div class="header">
-            <div class="header-left">
-                <div class="logo-circle"></div>
-                <h1 class="logo-text">RentMate</h1>
-            </div>
+        <div class="header-left">
+            <img src="{% static 'RentMateLogo.png' %}" alt="RentMate Logo" class="logo-image">
+            <h1 class="logo-text">RentMate</h1>
+        </div>
             <div class="header-right">
-                <button class="icon-btn">
-                    <svg fill="currentColor" viewBox="0 0 20 20" width="24" height="24">
-                        <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                    </svg>
-                </button>
-                <button class="icon-btn">
-                    <svg fill="currentColor" viewBox="0 0 20 20" width="24" height="24">
-                        <path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"/>
-                    </svg>
-                </button>
-                <div class="user-avatar-header"></div>
+                <div class="user-avatar-header">
+        {{ request.user.first_name|slice:":1" }}{{ request.user.last_name|slice:":1" }}
+    </div>
             </div>
         </div>
         <h1>Tenant Management</h1>
